--- a/calculator.html
+++ b/calculator.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html><html><head>
 <title>Calculator</title><meta charset="utf-8">
 <script type="text/javascript">
-function cube() {
+function sin() {
  var num = document.getElementById("n1");
- num.value = Math.pow(num.value, 3);
+ num.value = sin(num.value);
 }
 </script>
 </head>
@@ -11,6 +11,6 @@ function cube() {
 <h1>Calculadora de Daniel Conde Párraga</h1>
  Number:
  <input type="text" id="n1">
-  <button onclick="cube()"> x^3 </button>
+  <button onclick="cube()"> sin(x) </button>
 </body>
 </html>
